<resources>
    <!--<string name="app_name">Integration</string>-->

    <string name="action_settings">Settings</string>
    <string name="carbonfootprint">Carbon Footprint Calculator</string>
    <string name="chooseCategory">Choose A Category</string>
    <string name="category">Trip Category</string>
    <string name="vehicle">Vehicle Type</string>
    <string name="distance">Distance</string>
    <string name="date">Choose a date</string>
    <string name="dateText">Trip Date:</string>
    <string name="note">Note</string>
    <string name="submit">Add</string>
    <string name="viewRecords">View All Records</string>
	<string name="app_name">TipCalculator</string>
    <string name="fivePercent">5%</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="twentyFivePercent">25%</string>

    <string name="helpText">
        Help Menu\n\n
        Bill:   Enter your bill value.\n
        Tip:    This your tip dollar value to be added to your total.\n
        Total:  This is your total including tip.\n\n

        Add Record:\nWill take you to another fragment where  additional information
        about your tip will be collected and stored.\n\n

        ViewRecord:\nWill take you another fragment where you an view passed stored tips.\n\n

        Help:\nWill bring you to this fragment.\n\n

        Quick Tips\n
        The Quick Tip buttons are for fast and easy tip calculations. Clicking any
        of the five percentage increments will automatically calculate your tip
        (dollar-value) and apply it to the new total.\n\n

        Custom Tip\n
        Here you can adjust the percentage of your tip by increments of 1 percent.
        going below 0% is not permitted.\n\n

        History\n
        **Under construction**



    </string>
</resources>
